infra/k8s/result-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app
  namespace: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: result
          image: 605789054429.dkr.ecr.us-east-1.amazonaws.com/result-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: voting
spec:
  selector:
    app: result
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
