infra/k8s/vote-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app
  namespace: voting
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: vote
          image: 605789054429.dkr.ecr.us-east-1.amazonaws.com/vote-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: voting
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
