infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: voting
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /vote
          pathType: Prefix
          backend:
            service:
              name: vote-service
              port:
                number: 80
        - path: /result
          pathType: Prefix
          backend:
            service:
              name: result-service
              port:
                number: 4000
